# mi-lib-starter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config  config.ini  dzco_1.4.5-debian1_amd64.deb  liblist  liw_1.2.7-debian1_amd64.deb  milib-install  milib-rebuild  milib-uninstall  milib-uninstall-deb  neuz_0.2.5-debian1_amd64.deb  neuz_0.2.6-debian1_amd64.deb  roki-gl_1.6.18-debian1_amd64.deb  roki_1.6.16-debian1_amd64.deb  zeda_1.6.4-debian1_amd64.deb  zeda_1.6.5-debian1_amd64.deb  zeo_1.9.16-debian1_amd64.deb  zm_1.3.13-debian1_amd64.deb  zm_1.3.15-debian1_amd64.deb  zx11_1.2.7-debian1_amd64.deb
cmakes/: FindLibXml2.cmake  README_cmake.md  README_cmake_for_MSVC_JP.md
deb/: dzco-dev_1.4.5-debian1_amd64.deb  dzco_1.4.5-debian1_amd64.deb  liw-dev_1.2.7-debian1_amd64.deb  liw_1.2.7-debian1_amd64.deb  neuz-dev_0.2.6-debian1_amd64.deb  neuz_0.2.6-debian1_amd64.deb  roki-dev_1.6.17-debian1_amd64.deb  roki-dev_1.6.19-debian1_amd64.deb  roki-dev_1.6.20-debian1_amd64.deb  roki-fd-dev_1.4.4-debian1_amd64.deb  roki-fd_1.4.4-debian1_amd64.deb  roki-gl-dev_1.6.19-debian1_amd64.deb  roki-gl-dev_1.6.20-debian1_amd64.deb  roki-gl_1.6.19-debian1_amd64.deb  roki_1.6.17-debian1_amd64.deb  zeda-dev_1.6.16-debian1_amd64.deb  zeda_1.6.14-debian1_amd64.deb  zeo-dev_1.10.2-debian1_amd64.deb  zeo-dev_1.10.3-debian1_amd64.deb  zeo-dev_1.9.16-debian1_amd64.deb  zeo_1.9.16-debian1_amd64.deb  zm-dev_1.3.16-debian1_amd64.deb  zm-dev_1.3.22-debian1_amd64.deb  zm_1.3.15-debian1_amd64.deb  zx11-dev_1.2.7-debian1_amd64.deb  zx11_1.2.7-debian1_amd64.deb
scripts/: build  build_packages  download  install  install_dependencies  install_packages  mi-lib-clone.bat  mi-lib-install  mi-lib-rebuild  mi-lib-uninstall  milib-install  milib-install-deb  milib-rebuild  milib-uninstall  preprocess  uninstall_packages
test/: mi-lib-starter_test.c
